# remote-telescope-server

./: README.md  pyproject.toml
src/remote_telescope_server/rest_interface/: rest_server.py  server_manager.py
src/remote_telescope_server/telescope/: serial_telescope.py  telescope.py  zwo_am5.py
src/remote_telescope_server/telescope/serial_command_configs/: zwo_am5.json
